--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "formik": "^2.4.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
