--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.5",
     "next": "13.5.6",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
