--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
 NEXT_PUBLIC_FIREBASE_APP_ID=""
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=""
+NEXT_PUBLIC_FIREBASE_ADMIN_PROJECT_ID=""
+NEXT_PUBLIC_FIREBASE_ADMIN_PRIVATE_KEY=""
+NEXT_PUBLIC_FIREBASE_ADMIN_CLIENT_EMAIL=""
