--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.5.0",
+    "firebase-admin": "^11.11.0",
     "formik": "^2.4.5",
     "next": "13.5.6",
     "react": "^18",
