--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
