--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-device-detect": "^2.2.3",
@@ -22,6 +23,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
