--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
